fix: resolve typewriter effect layout issue with 'colaborador' word

--- a/css/main.css
+++ b/css/main.css
@@ -335,8 +335,6 @@ img {
 /* Typewriter effect */
 .Typewriter {
   display: inline-block;
-  min-width: 140px;
-  width: auto;
   position: relative;
   text-align: left;
 }
@@ -378,10 +376,8 @@ img {
 
 @media screen and (max-width: 767px) {
   .Typewriter {
-    min-width: 120px;
-    width: 120px;
-    display: block;
-    margin: 0 auto;
+    display: inline-block;
+    position: relative;
     text-align: center;
   }
 
@@ -1131,24 +1127,27 @@ img {
 
 @media screen and (max-width: 767px) {
   .heading {
-    font-size: 2.2rem;
-    min-height: 190px;
-    height: 190px;
+    min-height: auto;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-size: 2.2rem;
+    line-height: 1.3;
+    margin-bottom: 30px;
   }
 
   /* Keep hero content consistent height */
   .hero-content {
-    min-height: 700px;
+    min-height: 580px;
     display: flex;
     flex-direction: column;
     padding-bottom: 30px;
   }
 
   .hero-block {
-    min-height: 320px;
+    min-height: auto;
+    padding-bottom: 20px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -1378,13 +1377,14 @@ img {
 /* Fixed height for hero heading on mobile */
 @media screen and (max-width: 767px) {
   .heading {
-    min-height: 190px; /* Taller fixed height to accommodate all typewriter words */
-    height: 190px;
+    min-height: auto;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     font-size: 2.2rem;
     line-height: 1.3;
+    margin-bottom: 30px;
   }
 
   /* Keep hero content consistent height */
@@ -1396,7 +1396,8 @@ img {
   }
 
   .hero-block {
-    min-height: 320px;
+    min-height: auto;
+    padding-bottom: 20px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -1406,8 +1407,9 @@ img {
 @media screen and (max-width: 479px) {
   .heading {
     font-size: 1.9rem;
-    min-height: 210px;
-    height: 210px;
+    min-height: auto;
+    height: auto;
+    margin-bottom: 30px;
   }
 
   /* Update hero height to accommodate larger image */
@@ -1416,7 +1418,8 @@ img {
   }
 
   .hero-block {
-    min-height: 350px;
+    min-height: auto;
+    padding-bottom: 20px;
   }
 
   /* Optimize hero image */
